Fix: SM cards unblur on mobile

--- a/src/sass/base/_root.scss
+++ b/src/sass/base/_root.scss
@@ -25,6 +25,7 @@
 	--flow-spacer-h1-top-pad: #{$flow-spacer-h1-top-pad};
 	--flow-spacer-large: #{$flow-spacer-large};
 	--column-gap: #{$column-gap};
+	--narrow-column-gap: #{$narrow-column-gap};
 	--wide-column-gap: #{$wide-column-gap};
 	--gap-from-bottom: #{$gap-from-bottom};
 
