--- a/src/sass/components/_image-plus.scss
+++ b/src/sass/components/_image-plus.scss
@@ -209,16 +209,12 @@
             background-color: hsl(var(--clr-secondary-525));
 
             &.landscape {
-                // aspect-ratio: 2.75;
-
                 img {
                     aspect-ratio: 2.75;
                     scale: (1);
                 }
 
                 @include mqmax(small) {
-                    // aspect-ratio: 3.5;
-
                     img {
                         aspect-ratio: 3.5;
                     }
@@ -231,8 +227,12 @@
                     width: 50%;
 
                     @include mqmax(small) {
-                        font-size: var(--fs-600);
+                        font-size: var(--fs-650);
                         width: 100%;
+                        background-image: linear-gradient(to bottom,
+                                rgba(0, 0, 0, 0) 0%,
+                                rgba(0, 0, 0, 0.3) 80%,
+                                rgba(0, 0, 0, 0.45) 100%);
                     }
 
                     .sub-title {
@@ -247,6 +247,12 @@
                 filter: blur(1.5px);
                 opacity: 0.9;
                 transition: opacity 750ms ease-in-out;
+            }
+
+            @include mqmax(small) {
+                img {
+                    filter: none;
+                }
             }
         }
 
